Modificación para entrega del 9 de diciembre

--- a/codigo/Makefile
+++ b/codigo/Makefile
@@ -2,11 +2,11 @@
 
 setups: setup.exe clean
 
-setup.exe: agenda.o profesor.o alumno.o persona.o main.o funcionesAux.o
+setup.exe: agenda.o profesor.o alumno.o persona.o main_nuevo.o funcionesAux.o
 	g++ -std=c++11 *.o -o setup.exe
 
-main.o: main.cc profesor.h agenda.h alumno.h  funcionesAux.h
-	g++ -std=c++11 -c main.cc
+main_nuevo.o: main_nuevo.cc profesor.h agenda.h alumno.h  funcionesAux.h
+	g++ -std=c++11 -c main_nuevo.cc
 
 agenda.o: agenda.cc agenda.h alumno.h funcionesAux.h
 	g++ -std=c++11 -c agenda.cc
